  * Added a warning about charge neutrality to the documentation of
    `DielectricConstant` (Issue #4262, PR #4263)
  * Add support for reading chainID info from prmtop amber topologies (PR #4007)
  * Add support for reading chainID info from GROMACS TPR topologies 
    (Issue #3994, PR #4281)  
  * Add support for reading chainID info from Autodock PDBQT files (Issue #4207,
    PR #4284)

Changes
  * Biopython is now an optional dependency (Issue #3820, PR #4332)
  * Networkx is now an optional dependency (Issue #3822).
  * High memory tests (enabled through the environment variable
    `ENABLE_HIGH_MEM_UNIT_TESTS` are now only enabled if the environment variable
    is set to "true") (PR #4295)
  * The `mda-xdrlib` module is now a core dependency of MDAnalysis
    replacing the now deprecated `xdrlib` core Python library
    (PR #4271)
  * ConverterBase class moved from coordinates/base.py to converters/base.py (Issue #3404)
  * Results for WatsonCrickDist nucleic acids analysis are now stored in 
    `analysis.nucleicacids.WatsonCrickDist.results.distances` (Issue #3720, PR #3735)

Deprecations
  * MDAnalysis.lib.util is deprecated and will be removed in version 3.0
    (Issue #3649)
  * The TRZ reader & writer are deprecated and will be removed in version 3.0
    (PR #4335)
  * X3DNA has been deprecated and will be removed in 3.0.0 (Issue #3788)
  * coordinates.base.ConverterBase has been deprecated and will be removed in 3.0.0;
    use converters.base.ConvertBase instead (Issue #3404)
  * In `nucleicacids.WatsonCrickDist`, accepting lists of `Residue` objects was deprecated
    in favor of using `ResidueGroup`: using `List[Residue]` will be removed in release
    3.0.0; instead use a `ResidueGroup` (Issue #3720, PR #3735)
  * In `nucleicacids.WatsonCrickDist` the result `results.pair_distances` was
    deprecated and will be removed in 3.0.0; use `results.distances` (Issue #3720, 
    PR #3735)


28/08/23 IAlibay, hmacdope, pillose, jaclark5, tylerjereddy
