@@ -222,6 +222,7 @@ Chronological list of authors
   - Shubham Kumar
   - Zaheer Timol
   - Geongi Moon
+  - Yunpei Liu
 
 External code
 -------------
